--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -1,3 +1,199 @@
 <header class="db-header site-header">
-  Header
+  <div class="db-header-main">
+    <div class="db-container">
+      <div class="db-row">
+        <button class="db-btn--nav-menu"
+          type="button"
+          @click="toggleMenu();">
+          <div class="db-btn-wrap">
+            <div class="db-btn-icon">
+              <svg class="svg-icon-veggie-burger db-svg"
+                width="45"
+                height="13"
+                viewBox="0 0 45 13"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path id="path_01"
+                  d="M1 1H44"
+                  stroke="#FFFFFF"
+                  stroke-width="2"
+                  stroke-linecap="round">
+                </path>
+                <path id="path_02"
+                  d="M1 12H44"
+                  stroke="#FFFFFF"
+                  stroke-width="2"
+                  stroke-linecap="round">
+                </path>
+              </svg>
+            </div>
+          </div>
+        </button>
+        <a class="db-site-link"
+          title=""
+          href="">
+          <img class="db-site-logo db-img"
+            alt="Deadbeat"
+            title="Deadbeat"
+            src="{{ 'DB_Main_logo-v01-264x96.png' | asset_url }}"
+            width=""
+            height=""
+            loading="lazy"/>
+        </a>
+        <button class="db-btn--account">
+          <div class="db-btn-wrap">
+            <div class="db-btn-label">
+              <svg class="db-svg"
+                width="13"
+                height="20"
+                viewBox="0 0 13 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path id="path_01"
+                  d="M3.58621 0.857143C3.58621 0.383756 3.88726 0 4.25862 0H7.62069C7.99206 0 8.2931 0.383756 8.2931 0.857143V2.7288C8.39762 2.74713 8.49828 2.77032 8.59505 2.79836C9.46887 2.92428 10.1923 3.14912 10.7653 3.4729C11.4959 3.86863 12.0116 4.41725 12.3124 5.11877C12.4843 5.51449 12.5702 5.96418 12.5702 6.46784C12.5702 6.71967 12.5559 6.93552 12.5273 7.11539C12.4986 7.47515 12.4771 7.682 12.4628 7.73597C12.3769 8.07773 12.2193 8.40151 11.9901 8.7073C11.7322 9.06705 11.503 9.2919 11.3025 9.38184C11.3025 9.41781 11.2595 9.45379 11.1735 9.48976C11.1592 9.48976 11.0733 9.53473 10.9157 9.62467L10.7868 9.70561C10.7438 9.7236 10.708 9.74159 10.6793 9.75958L10.5289 9.84052C10.3714 9.96643 10.2782 10.0564 10.2496 10.1103L10.3355 10.1913C10.7939 10.4431 11.1735 10.6769 11.4744 10.8928C11.7752 11.1086 12.0331 11.3605 12.2479 11.6483C12.7493 12.3318 13 13.2042 13 14.2655V14.5083C13 14.6162 12.9857 14.6702 12.957 14.6702L12.8926 14.8321L12.7851 15.021C12.7278 15.0929 12.6562 15.1918 12.5702 15.3178C12.4843 15.4437 12.3769 15.5786 12.2479 15.7225L11.9901 15.9923C11.7895 16.2081 11.589 16.379 11.3884 16.5049C11.1879 16.6129 10.9229 16.7298 10.5934 16.8557C10.5504 16.8917 10.4358 16.9546 10.2496 17.0446C10.0061 17.1885 9.82699 17.2784 9.71241 17.3144C9.52616 17.4043 9.35428 17.4853 9.19669 17.5572C9.03912 17.6292 8.91019 17.6921 8.80992 17.7461C8.66666 17.7821 8.49478 17.8 8.29423 17.8L8.2931 17.8002V19.1429C8.2931 19.6162 7.99206 20 7.62069 20H4.25862C3.88726 20 3.58621 19.6162 3.58621 19.1429V18.2781C3.05347 18.2619 2.59581 18.2194 2.21323 18.1508C1.95538 18.1328 1.64738 18.0609 1.28926 17.935L0.601659 17.5302H0.472736C0.429753 17.5302 0.386769 17.4853 0.343813 17.3953C0.329476 17.3773 0.315139 17.3504 0.30083 17.3144C0.30083 17.2604 0.286493 17.1975 0.257846 17.1255C0.186216 16.8917 0.14326 16.6219 0.128923 16.3161C0.114614 15.9923 0.107445 15.6775 0.107445 15.3717C0.107445 14.976 0.114614 14.6792 0.128923 14.4813V14.1036C0.14326 13.9597 0.14326 13.7978 0.128923 13.6179C0.0429835 10.2722 0 7.78993 0 6.17104V4.84895C0 4.57914 0.00716847 4.37228 0.0214781 4.22838C0.0214781 4.10246 0.035815 3.85963 0.0644615 3.49988C0.0787985 3.49988 0.0931081 3.48189 0.107445 3.44592C0.121755 3.40994 0.136092 3.38296 0.150401 3.36497C0.136092 3.38296 0.2292 3.28403 0.429753 3.06818C0.472736 3.01421 0.544366 2.93327 0.644615 2.82534C0.687599 2.78937 0.723414 2.75339 0.75206 2.71742L0.880984 2.60949C0.938304 2.55553 0.98126 2.49257 1.00991 2.42062C1.11018 2.43861 1.26061 2.4476 1.46116 2.4476C1.70467 2.4476 1.91956 2.43861 2.10578 2.42062C2.29202 2.40263 2.44959 2.38464 2.57852 2.36666C2.81902 2.32727 3.15489 2.30226 3.58621 2.29162V0.857143ZM6.46777 7.95182L6.51075 7.92484C6.68263 7.8349 6.90469 7.70899 7.17685 7.5471L7.64958 7.27728C7.73555 7.22332 7.90743 7.12439 8.1653 6.98049C8.2226 6.92652 8.26558 6.89055 8.29423 6.87256C8.33718 6.85457 8.36583 6.84558 8.38017 6.84558L8.59505 6.71067C8.55207 6.60275 8.4661 6.51281 8.33718 6.44086C8.22259 6.36891 8.05786 6.28796 7.84297 6.19802C7.48484 6.10809 7.19835 6.06312 6.98346 6.06312C6.59669 6.06312 6.35316 6.22501 6.25288 6.54878C6.18128 6.76463 6.14546 7.16036 6.14546 7.73597V7.84389C6.14546 7.87987 6.15263 7.90685 6.16694 7.92484C6.18128 7.94282 6.20992 7.95182 6.25288 7.95182H6.46777ZM6.05949 14.5083C6.07383 14.5083 6.081 14.4993 6.081 14.4813L8.93884 12.8085L9.08927 12.6466C9.03195 12.6106 8.97466 12.5926 8.91736 12.5926L8.74546 12.4847C8.61653 12.4487 8.45179 12.4217 8.25124 12.4038C8.05069 12.3678 7.87878 12.3228 7.73555 12.2689C7.63527 12.2689 7.49201 12.2599 7.3058 12.2419C7.11955 12.2059 6.94765 12.1879 6.79008 12.1879H6.081C5.96639 12.1879 5.90909 12.3048 5.90909 12.5387V14.4004C5.90909 14.4723 5.94491 14.5083 6.01654 14.5083H6.05949Z"
+                  clip-rule="evenodd"
+                  fill-rule="evenodd"
+                  fill="#B522EB">
+                </path>
+              </svg>
+              <span>988.02</span>
+            </div>
+            <div class="btn-btn-icon">
+              <svg class="db-svg"
+                width="40"
+                height="40"
+                viewBox="0 0 40 40"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path id="path_01"
+                  d="M0 20C0 8.95455 8.95455 0 20 0C31.0455 0 40 8.95455 40 20C40 31.0455 31.0455 40 20 40C8.95455 40 0 31.0455 0 20ZM7.10545 30.0764C4.93273 27.2982 3.63636 23.8 3.63636 20C3.63669 17.4018 4.25572 14.8409 5.44223 12.5294C6.62875 10.2179 8.34863 8.22221 10.4596 6.70737C12.5705 5.19253 15.0119 4.20214 17.5816 3.81813C20.1513 3.43413 22.7755 3.66756 25.2371 4.49911C27.6986 5.33065 29.9268 6.73641 31.7372 8.60007C33.5477 10.4637 34.8883 12.7317 35.6482 15.2163C36.4081 17.701 36.5654 20.3308 36.1071 22.8883C35.6488 25.4458 34.5881 27.8575 33.0127 29.9236C31.4836 27.9635 29.5272 26.3783 27.2926 25.2887C25.058 24.1991 22.6042 23.634 20.1182 23.6364C17.5995 23.6342 15.1145 24.2143 12.8572 25.3315C10.5998 26.4486 8.63133 28.0725 7.10545 30.0764ZM9.68727 32.7055C12.6005 35.077 16.2435 36.3693 20 36.3636C23.8229 36.369 27.526 35.0304 30.4618 32.5818C29.2843 30.9379 27.7316 29.5987 25.9326 28.6753C24.1336 27.752 22.1403 27.2711 20.1182 27.2727C18.0705 27.2713 16.0528 27.7645 14.2367 28.7103C12.4206 29.6562 10.8599 31.0268 9.68727 32.7055ZM25.1426 19.688C26.5065 18.3242 27.2727 16.4743 27.2727 14.5455C27.2727 12.6166 26.5065 10.7668 25.1426 9.40286C23.7787 8.03896 21.9288 7.27273 20 7.27273C18.0712 7.27273 16.2213 8.03896 14.8574 9.40286C13.4935 10.7668 12.7273 12.6166 12.7273 14.5455C12.7273 16.4743 13.4935 18.3242 14.8574 19.688C16.2213 21.052 18.0712 21.8182 20 21.8182C21.9288 21.8182 23.7787 21.052 25.1426 19.688ZM22.5713 17.1168C23.2532 16.4348 23.6364 15.5099 23.6364 14.5455C23.6364 13.581 23.2532 12.6561 22.5713 11.9742C21.8893 11.2922 20.9644 10.9091 20 10.9091C19.0356 10.9091 18.1107 11.2922 17.4287 11.9742C16.7468 12.6561 16.3636 13.581 16.3636 14.5455C16.3636 15.5099 16.7468 16.4348 17.4287 17.1168C18.1107 17.7987 19.0356 18.1818 20 18.1818C20.9644 18.1818 21.8893 17.7987 22.5713 17.1168Z"
+                  clip-rule="evenodd"
+                  fill-rule="evenodd"
+                  fill="#B1FF29">
+                </path>
+              </svg>
+            </div>
+          </div>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="db-nav-menu db-scroll-bar"
+    :class="{ '--show' : header.showMenu }">
+    <div class="db-container">
+      <button class="db-btn--close-menu"
+        type="button"
+        @click="toggleMenu();">
+        <svg class="svg-icon-close db-svg"
+          width="21"
+          height="24"
+          viewBox="0 0 21 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path id="path_01"
+            d="M0.322395 21.0013C-0.0518008 21.4075 -0.0518008 22.0661 0.322395 22.4723C0.69659 22.8785 1.30328 22.8785 1.67748 22.4723L9.96966 13.471L18.5042 22.7354C18.8784 23.1416 19.4851 23.1416 19.8593 22.7354C20.2335 22.3292 20.2335 21.6707 19.8593 21.2645L11.3247 12L19.8593 2.73558C20.2335 2.32938 20.2335 1.67081 19.8593 1.26461C19.4851 0.858412 18.8784 0.858411 18.5042 1.26461L9.96966 10.529L1.67748 1.52772C1.30328 1.12152 0.69659 1.12152 0.322395 1.52772C-0.0518008 1.93391 -0.0518008 2.59249 0.322395 2.99869L8.61457 12L0.322395 21.0013Z"
+            clip-rule="evenodd"
+            fill-rule="evenodd"
+            fill="#A5A5A5">
+          </path>
+        </svg>
+      </button>
+      <div class="db-row">
+        <div class="db-col">
+          <ul class="db-menu-list">
+            <li class="db-menu-item"
+              v-for="(menuItem, menuIndex) in header.main_menu">
+              <a class="db-menu-link"
+                :title="menuItem.title"
+                :href="menuItem.url"
+                v-text="menuItem.title">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="db-col">
+          <p>
+            We are a Web3 brand focused on creating the storyworld and building the story canon with us… ON AIR!.
+            <br/>
+            <br/>
+            In a post-apocalyptic world devoid of the living, a disillusioned disc jockey and his eclectic group of co-workers struggle to keep the beat at a radio station that has one foot in the grave.
+          </p>
+          {% render 'socials' %}
+          <div class="db-inner-row">
+            <a class="db-menu-link"
+              title=""
+              href="">
+              Privacy Policy
+            </a>
+            <svg class="db-svg"
+              width="4"
+              height="5"
+              viewBox="0 0 4 5"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <circle id="circle_01"
+                cx="2"
+                cy="2.5"
+                r="2"
+                fill="#CAC7D0">
+              </circle>
+            </svg>
+            <a class="db-menu-link"
+              title=""
+              href="">
+              Terms of Use
+            </a>
+            <svg class="db-svg"
+              width="4"
+              height="5"
+              viewBox="0 0 4 5"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <circle id="circle_01"
+                cx="2"
+                cy="2.5"
+                r="2"
+                fill="#CAC7D0">
+              </circle>
+            </svg>
+            <a class="db-menu-link"
+              title=""
+              href="">
+              IP Rights
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
+<script>
+  const DB_Header_Options = {
+    name: 'DB Header Options',
+    data() {
+      return {
+        header: {
+          showMenu: false,
+          main_menu: [
+            {% for menuItem in linklists.main-menu.links %}
+              {
+                title: '{{ menuItem.title }}',
+                url: '{{ menuItem.url }}',
+              },
+            {% endfor %}
+          ],
+        }
+      }
+    },
+    created() {},
+    mounted() {},
+    updated() {},
+    methods: {
+      toggleMenu() {
+        this.header.showMenu = !this.header.showMenu;
+      },
+    }
+  };
+
+  Vue.createApp(DB_Header_Options).mount('.db-header');
+</script>
