--- a/styles/db-theme/_reset.scss
+++ b/styles/db-theme/_reset.scss
@@ -15,6 +15,10 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
   }
+
+  &::selection {
+    background-color: transparent;
+  }
 }
 
 html {
